...
        Future<dynamic> openInput() {
          if (isWide) {
            return showDialog(
              context: context,
              builder: (_) => AlertDialog(
                contentPadding: const EdgeInsets.all(24),
                title: const Text('New input'),
                actions: [
                  TextButton(
                    onPressed: () => Navigator.of(context).pop(),
                    child: const Text('Cancel'),
                  ),
                ],
...
